# CONCRETE

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: verify.yml
DISCRETE-CONCRETE/: Cargo.toml
DISCRETE-CONCRETE/examples/: basic.rs  digits.rs  divisibility.rs  prime_refactor.rs  refactoring.rs  trial_division.rs
DISCRETE-CONCRETE/src/: digits.rs  lib.rs
RATIONAL-CONCRETE/: Cargo.toml
RNG-CONCRETE/: Cargo.toml
RNG-CONCRETE/examples/: basic.rs
RNG-CONCRETE/src/: lib.rs
algebra_concrete/: Cargo.toml
algebra_concrete/documentation/: graph TD.mmd
algebra_concrete/examples/: gcd_demo.rs
algebra_concrete/src/: lib.rs  number_theory.rs  structures.rs
algebra_concrete/src/number_theory/: digits.rs  divisibility.rs  euclidean_algorithm.rs  gcd.rs  lcm.rs  primes.rs  traits.rs
algebra_concrete/src/number_theory/gcd/: test.rs
algebra_concrete/src/structures/: integer.rs  rational.rs
