[workspace]
resolver = "2"
members = [
    "DISCRETE-CONCRETE",
    "RATIONAL-CONCRETE",
    "RNG-CONCRETE",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Kei Thoma"]
license = "MIT"
repository = "https://github.com/keithoma/CONCRETE"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
# Enforce that every single item is documented
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
# Cleanliness
unused_qualifications = "warn"
explicit_outlives_requirements = "warn"
# This prevents you from using #[allow] to hide your sins without a reason
unfulfilled_lint_expectations = "warn"

[workspace.lints.clippy]
# Base aggressive groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# --- 1. THE "NO-PANIC" ENFORCERS ---
# No unwrap, no expect, no indexing [i], no unreachable!
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"
unreachable = "deny"

# --- 2. THE MATH RADICAL ---
# Treats standard operators as dangerous.
arithmetic_side_effects = "deny"
integer_division = "deny"
# Requires you to prove casts are safe (e.g. try_from instead of 'as')
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
# Floating point pedantry
float_cmp = "deny"
float_cmp_const = "deny"
float_arithmetic = "deny"

# --- 3. HARDCORE MEMORY & NO_STD ---
std_instead_of_core = "deny"
std_instead_of_alloc = "deny"
alloc_instead_of_core = "deny"
# Disallow allocating on the heap unless absolutely necessary
# (Remove if your lib uses Box/Vec heavily)
# default_numeric_fallback = "warn" 

# --- 4. API & DOCUMENTATION RIGOR ---
missing_errors_doc = "deny"
missing_panics_doc = "deny"
# Every struct and enum must be "Future Proofed"
exhaustive_enums = "deny"
exhaustive_structs = "deny"
# Ensures your public API doesn't expose internal types
mod_module_files = "warn"
# Makes sure you aren't leaking private types in public signatures
# (implicitly handled by rustc but clippy is louder)

# --- 5. THE "CLEAN CODE" EXTREMIST ---
# No shadow variables (forces unique names for everything)
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
# No "else" after a return (keeps logic flat)
else_if_without_else = "warn"
# Forces you to name every single argument in a closure
# (preventing the use of '_')
# (Can be very annoying, use with caution)
# closure_use_of_visible_id = "warn"

# --- 6. NECESSARY TRUCES (Avoid Loops) ---
implicit_return = "allow"
# Pattern type mismatch can be overly pedantic regarding references
pattern_type_mismatch = "allow"
# Blankets can be triggered by these settings
blanket_clippy_restriction_lints = "allow"