[package]
name = "algebra-concrete"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# This is where you'd add core-compatible crates if you ever allow them.
# For now, it's empty because you are a purist.

[lints]
workspace = true